[gd_scene load_steps=5 format=3 uid="uid://brftkxjlho48o"]

[ext_resource type="Script" path="res://assets/scripts/chat.gd" id="1_2duug"]
[ext_resource type="Texture2D" uid="uid://byk41ncxbnnxb" path="res://assets/sprites/chat.png" id="1_o1gga"]
[ext_resource type="FontFile" uid="uid://lavyopd271pq" path="res://assets/fonts/RobotoMono-Light.ttf" id="2_mphe7"]

[sub_resource type="LabelSettings" id="LabelSettings_4c3ju"]
font = ExtResource("2_mphe7")
font_size = 28

[node name="Chat" type="Node2D"]
script = ExtResource("1_2duug")

[node name="Chat" type="Sprite2D" parent="."]
position = Vector2(1467, 459)
texture = ExtResource("1_o1gga")

[node name="ChatTexto1" type="Label" parent="."]
offset_left = 1082.0
offset_top = 51.0
offset_right = 1841.0
offset_bottom = 89.0
text = "a"
label_settings = SubResource("LabelSettings_4c3ju")

[node name="ChatTexto2" type="Label" parent="."]
offset_left = 1082.0
offset_top = 133.0
offset_right = 1841.0
offset_bottom = 174.0
text = "a"
label_settings = SubResource("LabelSettings_4c3ju")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.055

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
